--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,32 @@
-beautifulsoup4>=4.12.0
-numpy>=1.26.0
+# Core Backend Framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+python-multipart==0.0.6
+
+# AI/ML & OpenAI
 openai>=1.0.0
-pandas>=2.0.0
-pgeocode>=0.4.0
-playwright>=1.40.0
-pydantic>=2.0.0
-python-dotenv>=1.0.0
-requests>=2.31.0
-streamlit>=1.30.0
-thefuzz>=0.19.0
 langfuse>=3.0.0
+
+# Data Processing
+pandas>=2.0.0
+numpy>=1.26.0
+
+# Data Validation
+pydantic>=2.0.0
+
+# Environment & Configuration
+python-dotenv>=1.0.0
+
+# HTTP & Web Scraping
+requests>=2.31.0
+beautifulsoup4>=4.12.0
+playwright>=1.40.0
+
+# Geolocation
+pgeocode>=0.4.0
+
+# Text Processing & Fuzzy Matching
+thefuzz>=0.19.0
+
+# Optional: Streamlit for demos (not required for main app)
+streamlit>=1.30.0
